[package]
name = "build_matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
envy = "0.4.2"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
