[package]
name = "build_matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.3.19", features = ["derive"] }
envy = "0.4.2"
log = "0.4.20"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
